legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__table_bug_page_0002.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: page_html
---
<!DOCTYPE html>
<html><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><head><title>연구회 유형 및 지원 예산</title><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="stylesheet" type="text/css" href="table-bug_style.css"></head><body><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:20mm;top:25mm;"><div class="hcI"><div class="hls ps7" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs74">[붙임 2]</span></div><div class="hls ps7" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:5.46mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps31" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:13.05mm;height:5.64mm;width:170.00mm;"><span class="hrt cs92">2026학년도 자율(전공)동아리 보고서</span></div><div class="hls ps7" style="line-height:229.35mm;white-space:nowrap;left:0.00mm;top:19.83mm;height:229.35mm;width:170.00mm;"><div class="htb" style="left:0mm;width:167.01mm;top:0mm;height:229.35mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 172.01 234.35" style="left:-2.5mm;top:-2.5mm;width:172.01mm;height:234.35mm;"><defs></defs><path d="M0,0 L0,229.35" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M23.4,0 L23.4,67.63" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M76.37,0 L76.37,20.93" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M105.24,0 L105.24,20.93" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M167.01,0 L167.01,229.35" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,0 L167.21,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.06,10.46 L167.07,10.46" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,20.93 L167.07,20.93" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,36.93 L167.07,36.93" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.2,67.63 L167.21,67.63" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.06,73.86 L167.07,73.86" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,112.74 L167.07,112.74" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,151.61 L167.07,151.61" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,190.48 L167.07,190.48" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.2,229.35 L167.21,229.35" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:23.4mm;height:10.46mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:2.12mm;"><div class="hls ps84" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:21.39mm;"><span class="hrt cs99">동아리명</span></div></div></div></div><div class="hce" style="left:23.4mm;top:0mm;width:52.98mm;height:10.46mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:2.64mm;"><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:50.97mm;"></div></div></div></div><div class="hce" style="left:76.37mm;top:0mm;width:28.86mm;height:10.46mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:2.12mm;"><div class="hls ps86" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:26.87mm;"><span class="hrt cs100">지도교사</span></div></div></div></div><div class="hce" style="left:105.24mm;top:0mm;width:61.77mm;height:10.46mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:2.47mm;"><div class="hls ps86" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:59.77mm;"></div></div></div></div><div class="hce" style="left:0mm;top:10.46mm;width:23.4mm;height:10.47mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:2.12mm;"><div class="hls ps84" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:21.39mm;"><span class="hrt cs99">동아리장</span></div></div></div></div><div class="hce" style="left:23.4mm;top:10.46mm;width:52.98mm;height:10.47mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI"><div class="hls ps86" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:50.97mm;"></div></div></div></div><div class="hce" style="left:76.37mm;top:10.46mm;width:28.86mm;height:10.47mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:2.12mm;"><div class="hls ps86" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:26.87mm;"><span class="hrt cs97">동아리실</span></div></div></div></div><div class="hce" style="left:105.24mm;top:10.46mm;width:61.77mm;height:10.47mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:2.03mm;"><div class="hls ps86" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:59.77mm;"></div></div></div></div><div class="hce" style="left:0mm;top:20.93mm;width:23.4mm;height:16mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:1.49mm;"><div class="hls ps84" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:21.39mm;"><span class="hrt cs99">동아리</span></div><div class="hls ps84" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:6.77mm;height:4.23mm;width:21.39mm;"><span class="hrt cs99">활동시간</span></div></div></div></div><div class="hce" style="left:23.4mm;top:20.93mm;width:143.61mm;height:16mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:4.88mm;"><div class="hls ps86" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:141.60mm;"><span class="hrt cs97">매주 화요일(</span><span class="hrt cs123">8-10교시)</span><span class="hrt cs97">, 금요일(6</span><span class="hrt cs123">-10교시)</span></div></div></div></div><div class="hce" style="left:0mm;top:36.93mm;width:23.4mm;height:30.7mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:12.24mm;"><div class="hls ps84" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:21.39mm;"><span class="hrt cs99">목표</span></div></div></div></div><div class="hce" style="left:23.4mm;top:36.93mm;width:143.61mm;height:30.7mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:9.48mm;"><div class="hls ps83" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:141.60mm;"><span class="hrt cs98">1.</span></div><div class="hls ps83" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:5.50mm;height:4.23mm;width:141.60mm;"><span class="hrt cs98">2.</span></div></div></div></div><div class="hce" style="left:0mm;top:67.63mm;width:167.01mm;height:6.23mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI"><div class="hls ps7" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:165.00mm;"><span class="hrt cs96">동아리 활동내용(</span><span class="hrt cs91">멘토링 활동내용 필수</span><span class="hrt cs96">)</span></div></div></div></div><div class="hce" style="left:0mm;top:73.86mm;width:167.01mm;height:38.87mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI"><div class="hls ps7" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:165.00mm;"><span class="hrt cs96">4월</span></div></div></div></div><div class="hce" style="left:0mm;top:112.74mm;width:167.01mm;height:38.87mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI"><div class="hls ps7" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:165.00mm;"><span class="hrt cs96">5월</span></div></div></div></div><div class="hce" style="left:0mm;top:151.61mm;width:167.01mm;height:38.87mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI"><div class="hls ps7" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:165.00mm;"><span class="hrt cs96">6월</span></div></div></div></div><div class="hce" style="left:0mm;top:190.48mm;width:167.01mm;height:38.87mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI"><div class="hls ps7" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:165.00mm;"><span class="hrt cs96">7월</span></div></div></div></div></div></div></div></div><div class="hpN" style="left:105mm;top:287mm;width:9.53mm;height:3.81mm;"><span class="hrt cs0">- 2 -</span></div></div></body></html>
