legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__table_bug_page_0003.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: page_html
---
<!DOCTYPE html>
<html><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><head><title>연구회 유형 및 지원 예산</title><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="stylesheet" type="text/css" href="table-bug_style.css"></head><body><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:20mm;top:25mm;"><div class="hcI"><div class="hls ps7" style="line-height:222.47mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:222.47mm;width:170.00mm;"><div class="htb" style="left:0.5mm;width:168mm;top:0.5mm;height:222.47mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 173 227.47" style="left:-2.5mm;top:-2.5mm;width:173mm;height:227.47mm;"><defs></defs><path d="M0,0 L0,221.47" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M167.01,0 L167.01,221.47" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,0 L167.21,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,44.29 L167.21,44.29" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,88.59 L167.21,88.59" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,132.88 L167.21,132.88" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,177.18 L167.21,177.18" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,221.47 L167.21,221.47" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:167.01mm;height:44.29mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI"><div class="hls ps7" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:165.00mm;"><span class="hrt cs96">8월</span></div></div></div></div><div class="hce" style="left:0mm;top:44.29mm;width:167.01mm;height:44.29mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI"><div class="hls ps7" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:165.00mm;"><span class="hrt cs96">9월</span></div></div></div></div><div class="hce" style="left:0mm;top:88.59mm;width:167.01mm;height:44.29mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI"><div class="hls ps7" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:165.00mm;"><span class="hrt cs96">10월</span></div></div></div></div><div class="hce" style="left:0mm;top:132.88mm;width:167.01mm;height:44.29mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI"><div class="hls ps7" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:165.00mm;"><span class="hrt cs96">11월</span></div></div></div></div><div class="hce" style="left:0mm;top:177.18mm;width:167.01mm;height:44.29mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI"><div class="hls ps7" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:165.00mm;"><span class="hrt cs96">12월</span></div></div></div></div></div></div><div class="hls ps7" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:224.62mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps7" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:230.83mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps96" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:237.21mm;height:3.88mm;width:170.00mm;"><span class="hrt cs95">지도교사:&nbsp;</span><span class="hrt cs124"><u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(서명)</u></span></div></div></div><div class="hpN" style="left:105mm;top:287mm;width:9.53mm;height:3.81mm;"><span class="hrt cs0">- 3 -</span></div></div></body></html>
