legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__table_bug_page_0005.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: page_html
---
<!DOCTYPE html>
<html><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><head><title>연구회 유형 및 지원 예산</title><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="stylesheet" type="text/css" href="table-bug_style.css"></head><body><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:20mm;top:25mm;"><div class="hcI"><div class="hls ps7" style="line-height:4.94mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.94mm;width:170.00mm;"><span class="hrt cs140">※ 보고서 작성 요령&nbsp;</span></div><div class="hls ps7" style="line-height:242.47mm;white-space:nowrap;left:0.00mm;top:7.90mm;height:242.47mm;width:170.00mm;"><div class="htb" style="left:1mm;width:170.97mm;top:1mm;height:242.47mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 175.97 247.47" style="left:-2.5mm;top:-2.5mm;width:175.97mm;height:247.47mm;"><defs></defs><path d="M0,0 L0,240.48" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.5;"></path><path d="M168.97,0 L168.97,240.48" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.5;"></path><path d="M-0.25,0 L169.22,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.5;"></path><path d="M-0.25,240.48 L169.22,240.48" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.5;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:168.97mm;height:240.48mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:33.48mm;"><div class="hls ps109" style="line-height:5.29mm;white-space:nowrap;left:3.53mm;top:0.00mm;height:5.29mm;width:164.44mm;"><span class="hrt cs141">Ⅰ. 프로젝트 실행 동기 및 목적</span></div><div class="hls ps109" style="line-height:5.29mm;white-space:nowrap;left:3.53mm;top:10.58mm;height:5.29mm;width:164.44mm;"><span class="hrt cs141">&nbsp;&nbsp;1.</span></div><div class="hls ps109" style="line-height:5.29mm;white-space:nowrap;left:3.53mm;top:21.17mm;height:5.29mm;width:164.44mm;"><span class="hrt cs141">&nbsp;&nbsp;&nbsp;&nbsp;가.&nbsp;</span></div><div class="hls ps109" style="line-height:5.29mm;white-space:nowrap;left:3.53mm;top:31.75mm;height:5.29mm;width:164.44mm;"><span class="hrt cs141">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1)&nbsp;</span></div><div class="hls ps109" style="line-height:5.29mm;white-space:nowrap;left:3.53mm;top:42.33mm;height:5.29mm;width:164.44mm;"><span class="hrt cs141">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;가)</span></div><div class="hls ps109" style="line-height:2.79mm;white-space:nowrap;left:3.53mm;top:52.74mm;height:3.53mm;width:164.44mm;"></div><div class="hls ps110" style="line-height:5.29mm;white-space:nowrap;left:3.53mm;top:63.50mm;height:5.29mm;width:164.44mm;"><span class="hrt cs141">Ⅱ. 이론적 배경(기존 사례 또는 문헌 연구 결과)</span></div><div class="hls ps109" style="line-height:2.79mm;white-space:nowrap;left:3.53mm;top:73.90mm;height:3.53mm;width:164.44mm;"></div><div class="hls ps110" style="line-height:5.29mm;white-space:nowrap;left:3.53mm;top:84.67mm;height:5.29mm;width:164.44mm;"><span class="hrt cs141">Ⅲ. 프로젝트 방법 및 과정</span></div><div class="hls ps109" style="line-height:2.79mm;white-space:nowrap;left:3.53mm;top:95.07mm;height:3.53mm;width:164.44mm;"></div><div class="hls ps110" style="line-height:5.29mm;white-space:nowrap;left:3.53mm;top:105.83mm;height:5.29mm;width:164.44mm;"><span class="hrt cs141">Ⅳ. 프로젝트 결과</span></div><div class="hls ps109" style="line-height:2.79mm;white-space:nowrap;left:3.53mm;top:116.24mm;height:3.53mm;width:164.44mm;"></div><div class="hls ps110" style="line-height:5.29mm;white-space:nowrap;left:3.53mm;top:127.00mm;height:5.29mm;width:164.44mm;"><span class="hrt cs141">Ⅴ. 결론 및 고찰</span></div><div class="hls ps110" style="line-height:2.79mm;white-space:nowrap;left:3.53mm;top:137.40mm;height:3.53mm;width:164.44mm;"></div><div class="hls ps110" style="line-height:5.29mm;white-space:nowrap;left:3.53mm;top:148.17mm;height:5.29mm;width:164.44mm;"><span class="hrt cs141">▣ 참고문헌</span></div><div class="hls ps7" style="line-height:5.29mm;white-space:nowrap;left:0.00mm;top:158.75mm;height:5.29mm;width:167.96mm;"><span class="hrt cs142">&nbsp;&nbsp;※ 위 작성 요령에 준하여 작성, A4 10매 내외 작성</span></div><div class="hls ps110" style="line-height:2.79mm;white-space:nowrap;left:3.53mm;top:167.04mm;height:3.53mm;width:164.44mm;"></div></div></div></div></div></div></div></div><div class="hpN" style="left:105mm;top:287mm;width:9.53mm;height:3.81mm;"><span class="hrt cs0">- 5 -</span></div></div></body></html>
