legacy/rust/crates/hwp-core/tests/snapshots/snapshot_tests__table_bug_page_0006.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: page_html
---
<!DOCTYPE html>
<html><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><head><title>연구회 유형 및 지원 예산</title><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="stylesheet" type="text/css" href="table-bug_style.css"></head><body><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:20mm;top:25mm;"><div class="hcI"><div class="hls ps7" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs74">[붙임 4]</span></div><div class="hls ps30" style="line-height:7.06mm;white-space:nowrap;left:0.00mm;top:7.41mm;height:7.06mm;width:170.00mm;"><span class="hrt cs126">2026학년도 전공(심화)동아리 지도 일지</span></div><div class="hls ps30" style="line-height:212.32mm;white-space:nowrap;left:0.00mm;top:20.46mm;height:212.32mm;width:170.00mm;"><div class="htb" style="left:0.49mm;width:169.21mm;top:0.49mm;height:212.32mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 174.21 217.32" style="left:-2.5mm;top:-2.5mm;width:174.21mm;height:217.32mm;"><defs></defs><path d="M0,0 L0,211.33" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M33.55,0 L33.55,211.33" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M63.96,74.25 L63.96,81.17" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M63.96,106.72 L63.96,113.71" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M63.96,139.26 L63.96,146.25" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M63.96,171.8 L63.96,178.79" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M63.96,204.34 L63.96,211.33" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M134.31,38.77 L134.31,211.33" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M150.8,38.77 L150.8,211.33" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M168.22,0 L168.22,211.33" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,0 L168.42,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.06,13.5 L168.28,13.5" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.2,38.77 L168.42,38.77" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,47.7 L168.42,47.7" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M33.49,74.25 L134.37,74.25" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M168.16,74.25 L168.28,74.25" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,81.17 L168.28,81.17" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M33.49,106.72 L134.37,106.72" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M168.16,106.72 L168.28,106.72" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,113.71 L168.28,113.71" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M33.49,139.26 L134.37,139.26" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M168.16,139.26 L168.28,139.26" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,146.25 L168.28,146.25" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M33.49,171.8 L134.37,171.8" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M168.16,171.8 L168.28,171.8" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,178.79 L168.28,178.79" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M33.49,204.34 L134.37,204.34" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M168.16,204.34 L168.28,204.34" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.2,211.33 L168.42,211.33" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:33.55mm;height:13.5mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.95mm;"><div class="hls ps62" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:1.76mm;height:4.59mm;width:31.55mm;"><span class="hrt cs127">동아리명</span></div></div></div></div><div class="hce" style="left:33.55mm;top:0mm;width:134.67mm;height:13.5mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.95mm;"><div class="hls ps62" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:1.58mm;height:3.53mm;width:132.67mm;"></div></div></div></div><div class="hce" style="left:0mm;top:13.5mm;width:33.55mm;height:25.27mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.38mm;"><div class="hls ps63" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:1.76mm;height:4.59mm;width:31.55mm;"><span class="hrt cs127">동아리원</span></div><div class="hls ps63" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:12.70mm;height:4.59mm;width:31.55mm;"><span class="hrt cs127">(총원: &nbsp;&nbsp;&nbsp;명)</span></div></div></div></div><div class="hce" style="left:33.55mm;top:13.5mm;width:134.67mm;height:25.27mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:10.02mm;"><div class="hls ps86" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:132.67mm;"><span class="hrt cs125">1111홍길동, 2112김철수, ...(학번 오름차순으로 작성)</span></div></div></div></div><div class="hce" style="left:0mm;top:38.77mm;width:33.55mm;height:8.93mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.67mm;"><div class="hls ps20" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.59mm;width:31.55mm;"><span class="hrt cs127">일 정</span></div></div></div></div><div class="hce" style="left:33.55mm;top:38.77mm;width:100.76mm;height:8.93mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.67mm;"><div class="hls ps20" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.59mm;width:98.75mm;"><span class="hrt cs127">지도 활동 및 내용</span></div></div></div></div><div class="hce" style="left:134.31mm;top:38.77mm;width:16.5mm;height:8.93mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.67mm;"><div class="hls ps20" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.59mm;width:14.49mm;"><span class="hrt cs127">시간</span></div></div></div></div><div class="hce" style="left:150.8mm;top:38.77mm;width:17.42mm;height:8.93mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.67mm;"><div class="hls ps20" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.59mm;width:15.41mm;"><span class="hrt cs127">서명</span></div></div></div></div><div class="hce" style="left:0mm;top:47.7mm;width:33.55mm;height:33.46mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:14.47mm;"><div class="hls ps48" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:31.55mm;"><span class="hrt cs128">&nbsp;&nbsp;&nbsp;월 &nbsp;&nbsp;&nbsp;일 ( &nbsp;&nbsp;)</span></div></div></div></div><div class="hce" style="left:33.55mm;top:47.7mm;width:100.76mm;height:26.55mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:10.48mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:98.75mm;"></div></div></div></div><div class="hce" style="left:134.31mm;top:47.7mm;width:16.5mm;height:33.46mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:13.94mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:14.49mm;"></div></div></div></div><div class="hce" style="left:150.8mm;top:47.7mm;width:17.42mm;height:33.46mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:13.94mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:15.41mm;"></div></div></div></div><div class="hce" style="left:33.55mm;top:74.25mm;width:30.41mm;height:6.91mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.19mm;"><div class="hls ps21" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:28.41mm;"><span class="hrt cs128">지도인원: &nbsp;&nbsp;&nbsp;명</span></div></div></div></div><div class="hce" style="left:63.96mm;top:74.25mm;width:70.35mm;height:6.91mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.19mm;"><div class="hls ps21" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:68.34mm;"><span class="hrt cs128">결시자:&nbsp;</span><span class="hrt cs129">1111홍길동, 2112김철수</span></div></div></div></div><div class="hce" style="left:0mm;top:81.17mm;width:33.55mm;height:32.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:14.01mm;"><div class="hls ps48" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:31.55mm;"><span class="hrt cs128">&nbsp;&nbsp;&nbsp;월 &nbsp;&nbsp;&nbsp;일 ( &nbsp;&nbsp;)</span></div></div></div></div><div class="hce" style="left:33.55mm;top:81.17mm;width:100.76mm;height:25.55mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:9.98mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:98.75mm;"></div></div></div></div><div class="hce" style="left:134.31mm;top:81.17mm;width:16.5mm;height:32.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:13.48mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:14.49mm;"></div></div></div></div><div class="hce" style="left:150.8mm;top:81.17mm;width:17.42mm;height:32.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:13.48mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:15.41mm;"></div></div></div></div><div class="hce" style="left:33.55mm;top:106.72mm;width:30.41mm;height:6.99mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.23mm;"><div class="hls ps21" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:28.41mm;"><span class="hrt cs128">지도인원: &nbsp;&nbsp;&nbsp;명</span></div></div></div></div><div class="hce" style="left:63.96mm;top:106.72mm;width:70.35mm;height:6.99mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.23mm;"><div class="hls ps21" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:68.34mm;"><span class="hrt cs128">결시자:&nbsp;</span></div></div></div></div><div class="hce" style="left:0mm;top:113.71mm;width:33.55mm;height:32.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:14.01mm;"><div class="hls ps48" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:31.55mm;"><span class="hrt cs128">&nbsp;&nbsp;&nbsp;월 &nbsp;&nbsp;&nbsp;일 ( &nbsp;&nbsp;)</span></div></div></div></div><div class="hce" style="left:33.55mm;top:113.71mm;width:100.76mm;height:25.55mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:9.98mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:98.75mm;"></div></div></div></div><div class="hce" style="left:134.31mm;top:113.71mm;width:16.5mm;height:32.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:13.48mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:14.49mm;"></div></div></div></div><div class="hce" style="left:150.8mm;top:113.71mm;width:17.42mm;height:32.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:13.48mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:15.41mm;"></div></div></div></div><div class="hce" style="left:33.55mm;top:139.26mm;width:30.41mm;height:6.99mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.23mm;"><div class="hls ps21" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:28.41mm;"><span class="hrt cs128">지도인원: &nbsp;&nbsp;&nbsp;명</span></div></div></div></div><div class="hce" style="left:63.96mm;top:139.26mm;width:70.35mm;height:6.99mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.23mm;"><div class="hls ps21" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:68.34mm;"><span class="hrt cs128">결시자:&nbsp;</span></div></div></div></div><div class="hce" style="left:0mm;top:146.25mm;width:33.55mm;height:32.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:14.01mm;"><div class="hls ps48" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:31.55mm;"><span class="hrt cs128">&nbsp;&nbsp;&nbsp;월 &nbsp;&nbsp;&nbsp;일 ( &nbsp;&nbsp;)</span></div></div></div></div><div class="hce" style="left:33.55mm;top:146.25mm;width:100.76mm;height:25.55mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:9.98mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:98.75mm;"></div></div></div></div><div class="hce" style="left:134.31mm;top:146.25mm;width:16.5mm;height:32.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:13.48mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:14.49mm;"></div></div></div></div><div class="hce" style="left:150.8mm;top:146.25mm;width:17.42mm;height:32.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:13.48mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:15.41mm;"></div></div></div></div><div class="hce" style="left:33.55mm;top:171.8mm;width:30.41mm;height:6.99mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.23mm;"><div class="hls ps21" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:28.41mm;"><span class="hrt cs128">지도인원: &nbsp;&nbsp;&nbsp;명</span></div></div></div></div><div class="hce" style="left:63.96mm;top:171.8mm;width:70.35mm;height:6.99mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.23mm;"><div class="hls ps21" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:68.34mm;"><span class="hrt cs128">결시자:&nbsp;</span></div></div></div></div><div class="hce" style="left:0mm;top:178.79mm;width:33.55mm;height:32.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:14.01mm;"><div class="hls ps48" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:31.55mm;"><span class="hrt cs128">&nbsp;&nbsp;&nbsp;월 &nbsp;&nbsp;&nbsp;일 ( &nbsp;&nbsp;)</span></div></div></div></div><div class="hce" style="left:33.55mm;top:178.79mm;width:100.76mm;height:25.55mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:9.98mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:98.75mm;"></div></div></div></div><div class="hce" style="left:134.31mm;top:178.79mm;width:16.5mm;height:32.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:13.48mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:14.49mm;"></div></div></div></div><div class="hce" style="left:150.8mm;top:178.79mm;width:17.42mm;height:32.54mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:13.48mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:15.41mm;"></div></div></div></div><div class="hce" style="left:33.55mm;top:204.34mm;width:30.41mm;height:6.99mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.23mm;"><div class="hls ps21" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:28.41mm;"><span class="hrt cs128">지도인원: &nbsp;&nbsp;&nbsp;명</span></div></div></div></div><div class="hce" style="left:63.96mm;top:204.34mm;width:70.35mm;height:6.99mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.23mm;"><div class="hls ps21" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:68.34mm;"><span class="hrt cs128">결시자:&nbsp;</span></div></div></div></div></div></div><div class="hls ps60" style="line-height:4.94mm;white-space:nowrap;left:0.00mm;top:238.77mm;height:4.94mm;width:170.00mm;"><span class="hrt cs87">지도 교사 &nbsp;: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(인)</span></div><div class="hls ps60" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:245.79mm;height:3.53mm;width:170.00mm;"></div></div></div><div class="hpN" style="left:105mm;top:287mm;width:9.53mm;height:3.81mm;"><span class="hrt cs0">- 6 -</span></div></div></body></html>
